# pa_lang

./: README.md  pyproject.toml
bench/: ablation.py  benchmark.py  results.md  v01_baseline.json
bench/reference/: compare_bufs.asm  ext_bytecount.asm  ext_find_byte_gt.asm  ext_find_byte_lt.asm  ext_find_mismatch.asm  ext_find_nonascii.asm  ext_memchr.asm  ext_memchr2.asm  ext_memcmp.asm  ext_memrchr.asm  ext_memset.asm  ext_prefix_eq.asm  ext_strchr.asm  ext_strlen.asm  ext_strspn.asm  fibonacci.asm  find_delim.asm  find_zero.asm  min_byte.asm  sum_bytes.asm  xor_buffer.asm
bench/wasm/: compare_bufs.wasm  compare_bufs.wat  fibonacci.wasm  fibonacci.wat  find_delim.wasm  find_delim.wat  find_zero.wasm  find_zero.wat  min_byte.wasm  min_byte.wat  sum_bytes.wasm  sum_bytes.wat  xor_buffer.wasm  xor_buffer.wat
docs/: ablation.md  architecture.md  external_kernels.md  gap_analysis.md  methodology.md  v02_changes.md
programs/: compare_bufs.pa  ext_bytecount.pa  ext_find_byte_gt.pa  ext_find_byte_lt.pa  ext_find_mismatch.pa  ext_find_nonascii.pa  ext_memchr.pa  ext_memchr2.pa  ext_memcmp.pa  ext_memrchr.pa  ext_memset.pa  ext_prefix_eq.pa  ext_strchr.pa  ext_strlen.pa  ext_strspn.pa  fibonacci.pa  find_delim.pa  find_zero.pa  min_byte.pa  sum_bytes.pa  xor_buffer.pa
src/pa/: __init__.py  assembler.py  bytecode.py  disassembler.py  isa.py  vm.py
tests/: test_assembler.py  test_bytecode.py  test_disassembler.py  test_isa.py  test_vm.py
