[project]
name = "pa-lang"
version = "0.1.0"
description = "PA (Packed Assembly) — compact assembly-like language for a custom VM"
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pa"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
